--- a/index.html
+++ b/index.html
@@ -2,6 +2,13 @@
 <html lang="en">
 
 <head>
+    <link rel="canonical" href="https://beautymeter.net" />
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Let artificial intelligence rate how
+        attractive you are. Other beauty analysis rely on inaccurate facial
+        landmark techniques, but Beautymeter uses a cutting edge neural network
+        approach.">
     <meta name="keywords" content="beauty analysis">
     <title>How beautiful are you?</title>
     <link href="https://fonts.googleapis.com/css?family=Patua+One&display=swap" rel="stylesheet">
@@ -12,14 +19,14 @@
 </head>
 
 <body id="body">
-    <script src="../public/index.bundle.js" type="text/javascript"></script>
+    <script src="./public/index.bundle.js" type="text/javascript"></script>
     <div class="cover-container d-flex w-100 h-100 mx-auto px-3 flex-column overflow-hidden">
 
         <header id="navigation_header">
 
             <nav id="navbar" class="navbar navbar-expand-lg navbar-dark">
                 <div class="container">
-                    <a class="navbar-brand" href="../index.html">BEAUTYMETER</a>
+                    <a class="navbar-brand" href="./index.html">BEAUTYMETER</a>
 
                     <input type="checkbox" id="lua-navbar-toggler" class="d-none" />
                     <label for="lua-navbar-toggler" class="navbar-toggler" data-toggle="collapse"
@@ -31,10 +38,10 @@
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul id="nav-list" class="navbar-nav ml-auto">
                             <li class="nav-item">
-                                <a class="nav-link" href="../index.html">HOME <span class="sr-only">(current)</span></a>
+                                <a class="nav-link" href="./index.html">HOME</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="../about.html">ABOUT</a>
+                                <a class="nav-link" href="./about.html">ABOUT</a>
                             </li>
                         </ul>
                     </div>
@@ -55,7 +62,7 @@
                 </div>
 
                 <div class="col-xs-12 text-center btn-lg">
-                    <button id="start_button" onclick="location.href='../get-attractiveness-score.html';"
+                    <button id="start_button" onclick="location.href='./get-attractiveness-score.html';"
                         class="text-center btn btn-primary">Click to start</button>
                 </div>
 
