--- a/index.html
+++ b/index.html
@@ -70,19 +70,19 @@
                     <div class="row">
                         <div class="col-md-4">
                             <div class="col-xs-12">
-                                <img src="../static/images/pretty_boy_cropped_resized.jpg" alt="handsome boy"
+                                <img src="./static/images/pretty_boy_cropped_resized.jpg" alt="handsome boy"
                                     class="rounded-circle img-fluid">
                             </div>
                         </div>
                         <div class="col-md-4">
                             <div class="col-xs-12">
-                                <img src="../static/images/pretty_woman_cropped_resized.jpg" alt="beautiful woman"
+                                <img src="./static/images/pretty_woman_cropped_resized.jpg" alt="beautiful woman"
                                     class="rounded-circle img-fluid">
                             </div>
                         </div>
                         <div class="col-md-4">
                             <div class="col-xs-12">
-                                <img src="../static/images/black_attractive_woman_cropped_resized.jpg" alt="pretty girl"
+                                <img src="./static/images/black_attractive_woman_cropped_resized.jpg" alt="pretty girl"
                                     class="rounded-circle img-fluid">
                             </div>
                         </div>
